Mafia 3: Trees get rendered incorrectly
System information
- GPU: [AMD/ATI] Vega 10 XL/XT [Radeon RX Vega 56/64] (rev c3)
- Kernel version: 5.4.3-10-tkg-pds TKG SMP PREEMPT Sun, 15 Dec 2019 13:58:16 +0000 x86_64 GNU/Linux
- Mesa version: OpenGL version string: 4.6 (Compatibility Profile) Mesa 20.1.0-devel (git-7aa6720b)
- Xserver version (if applicable): X.Org X Server 1.20.8
- Desktop manager and compositor: Plasma
- DXVK version: 1.55
- Wine/Proton version: 5.4 TKG (last working for MAFIA 3)
Describe the issue
The trees in the background are heavily whitish flickering with LLVM
This is not happening with PRO 19.30
ACO is completely freaking out, showing distorted polygons.
Renderdoc capture - big file over 800Mb compressed.wine64-preloader_2020.04.11_21.14_frame25027.rdc.xz
ACO Renderdoc capture gives me a Segmentation fault. Still worth uploading it? Also it seems there is VK_EXT_shader_demote_to_helper_invocation used with ACO - I would try to start without to see if it fixes the game, but how? MESA_EXTENSION_OVERRIDE=-VK_EXT_shader_demote_to_helper_invocation seems not to help here.